# cpuinfo-rs

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  build.rs  info.txt  release.toml
.github/workflows/: ci.yml  cross.yaml  generate_bindings.yaml  publish.yaml
examples/: info.rs
src/: bindings.rs  bindings_aarch64_apple_darwin.rs  bindings_aarch64_apple_ios.rs  bindings_aarch64_linux_android.rs  bindings_aarch64_pc_windows_msvc.rs  bindings_aarch64_unknown_linux_gnu.rs  bindings_armv7_unknown_linux_gnueabihf.rs  bindings_x86_64_apple_darwin.rs  bindings_x86_64_pc_windows_msvc.rs  bindings_x86_64_unknown_freebsd.rs  bindings_x86_64_unknown_linux_gnu.rs  lib.rs
