[package]
name = "cpuinfo-rs"
version = "0.2.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"

[features]
generate_bindings = ["dep:bindgen"]

[dependencies]
bytemuck = "1"
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1"

[build-dependencies]
bindgen = { version = "0.69", optional = true }
cc = "1.0.83"
