[package]
name = "cpuinfo-rs"
version = "0.5.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/cpuinfo-rs"
description = "Rust bindings for `cpuinfo`"
include = ["src", "vendor", "examples", "LICENSE", "build.rs"]
categories = ["hardware-support"] # https://crates.io/category_slugs
keywords = []
rust-version = "1.74"

[dependencies]
bytemuck = "1"
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1"

[build-dependencies]
bindgen = "0.71"
cc = "1.1"
